--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Betclic</title>
 </head>
 <body>
-    
+<a href="bet.html"> Fichier Bet </a>
+<a href="login.html"> // Fichier Login </a>
+<a href="grades.html"> // Fichier Grades </a>
 
 
 
