--- a/bet.html
+++ b/bet.html
@@ -9,10 +9,22 @@
     <h2>1v1</h2>
     <form id="betForm">
         <label for="examId">Sujet Exam:</label>
-        <input type="text" id="examId" name="examId" required><br><br>
+        <select id="exam" name="exam" required>
+            <option value="" disabled selected>-- Sélectionner un Exam --</option>
+            <option value="101">Développement</option>
+            <option value="102">Cybersécurité</option>
+            <option value="103">Maths</option>
+            <option value="104">Réseau</option>
+        </select><br><br>
 
         <label for="opponentId">Contre qui veux-tu parier ?</label>
-        <input type="text" id="opponentId" name="opponentId" required><br><br>
+        <select id="user_1" name="user_1" required>
+            <option value="" disabled selected>-- Sélectionner User  --</option>
+            <option value="1">Bello</option>
+            <option value="2">Bilal</option>
+            <option value="3">Mehdi</option>
+            <option value="4">Adama</option>
+        </select><br><br>
 
         <label for="betAmount">Combien de TSIO Coins veux-tu miser ?</label>
         <input type="number" id="betAmount" name="betAmount" required><br><br>
