updated bet.html again

--- a/bet.html
+++ b/bet.html
@@ -20,10 +20,19 @@
         <label for="opponentId">Contre qui veux-tu parier ?</label>
         <select id="user_1" name="user_1" required>
             <option value="" disabled selected>-- Sélectionner User  --</option>
-            <option value="1">Bello</option>
-            <option value="2">Bilal</option>
-            <option value="3">Mehdi</option>
-            <option value="4">Adama</option>
+            <option value="1">Yacine</option>
+            <option value="2">Mohamed</option>
+            <option value="3">Nicolas</option>
+            <option value="5">Suriyaa</option>
+            <option value="6">Kerry</option>
+            <option value="7">Ben Hachim</option>
+            <option value="8">Sabrina</option>
+            <option value="9">Maël</option>
+            <option value="10">Abdu</option>
+            <option value="11">Billel</option>
+            <option value="12">Cedric</option>
+            <option value="13">Edson</option>
+            <option value="14">Mohamed B</option>
         </select><br><br>
 
         <label for="betAmount">Combien de TSIO Coins veux-tu miser ?</label>
